Fase Final Finalizada - Entrega T4